--- a/public/css/style.css
+++ b/public/css/style.css
@@ -451,20 +451,38 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-bottom-16 {
   bottom: -4rem;
 }
-.top-36 {
-  top: 9rem;
+.top-56 {
+  top: 14rem;
 }
 .right-1 {
   right: 0.25rem;
 }
-.top-56 {
-  top: 14rem;
-}
-.top-7 {
-  top: 1.75rem;
-}
 .top-14 {
   top: 3.5rem;
+}
+.top-4 {
+  top: 1rem;
+}
+.-top-3 {
+  top: -0.75rem;
+}
+.-left-3 {
+  left: -0.75rem;
+}
+.right-0 {
+  right: 0px;
+}
+.right-4 {
+  right: 1rem;
+}
+.right-3 {
+  right: 0.75rem;
+}
+.-top-\[-5px\] {
+  top: 5px;
+}
+.top-\[-5px\] {
+  top: -5px;
 }
 .z-10 {
   z-index: 10;
@@ -502,13 +520,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .my-14 {
   margin-top: 3.5rem;
@@ -520,20 +538,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-36 {
   margin-top: 9rem;
 }
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-.mt-0 {
-  margin-top: 0px;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.mb-6 {
-  margin-bottom: 1.5rem;
+.mt-0 {
+  margin-top: 0px;
 }
-.mt-9 {
-  margin-top: 2.25rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -571,6 +586,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-10 {
   width: 2.5rem;
 }
+.w-11 {
+  width: 2.75rem;
+}
 .w-6 {
   width: 1.5rem;
 }
@@ -591,6 +609,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-12 {
   width: 3rem;
+}
+.w-9 {
+  width: 2.25rem;
+}
+.w-8 {
+  width: 2rem;
 }
 .flex-row {
   flex-direction: row;
@@ -687,12 +711,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -726,47 +744,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(40 1 102 / var(--tw-text-opacity));
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-cyan-600 {
-  --tw-text-opacity: 1;
-  color: rgb(8 145 178 / var(--tw-text-opacity));
-}
-.text-cyan-500 {
-  --tw-text-opacity: 1;
-  color: rgb(6 182 212 / var(--tw-text-opacity));
-}
 .text-cyan-400 {
   --tw-text-opacity: 1;
   color: rgb(34 211 238 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-cyan-300 {
   --tw-text-opacity: 1;
   color: rgb(103 232 249 / var(--tw-text-opacity));
 }
-.text-cyan-200 {
-  --tw-text-opacity: 1;
-  color: rgb(165 243 252 / var(--tw-text-opacity));
-}
 .text-cyan-100 {
   --tw-text-opacity: 1;
   color: rgb(207 250 254 / var(--tw-text-opacity));
 }
-.shadow-\[0_35px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
-  --tw-shadow: 0 35px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: 0 35px 60px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-\[-1px_10px_12px_1px_rgba\(0\2c 0\2c 0\2c 0\.75\)\] {
-  --tw-shadow: -1px 10px 12px 1px rgba(0,0,0,0.75);
-  --tw-shadow-colored: -1px 10px 12px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow-\[-1px_5px_20px_1px_rgba\(0\2c 0\2c 0\2c 0\.75\)\] {
   --tw-shadow: -1px 5px 20px 1px rgba(0,0,0,0.75);
   --tw-shadow-colored: -1px 5px 20px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-inner {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-\[-1px_0px_14px_1px_rgba\(0\2c 0\2c 0\2c 0\.75\)\] {
@@ -777,15 +778,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:right-0:hover {
   right: 0px;
 }
+.hover\:-right-3:hover {
+  right: -0.75rem;
+}
 .hover\:w-full:hover {
   width: 100%;
+}
+.hover\:rounded-none:hover {
+  border-radius: 0px;
+}
+.hover\:border-0:hover {
+  border-width: 0px;
 }
 .hover\:bg-color-secundary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(40 1 102 / var(--tw-bg-opacity));
 }
-.hover\:shadow-\[-1px_0px_14px_1px_rgba\(0\2c 0\2c 0\2c 0\.75\)\]:hover {
-  --tw-shadow: -1px 0px 14px 1px rgba(0,0,0,0.75);
-  --tw-shadow-colored: -1px 0px 14px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hover\:p-0:hover {
+  padding: 0px;
 }
